--- a/assets/stylesheet/stylesheet.css
+++ b/assets/stylesheet/stylesheet.css
@@ -1,6 +1,6 @@
 * {
-	margin: 0px:
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 }
 
 li {
@@ -22,7 +22,6 @@ li {
 	widht: 100%;
 	height: 50px;
 	border-bottom:5px inset gray;
-	background: orange;
 	position: relative;
 	
 }
@@ -34,10 +33,8 @@ li {
 .video {
 	display: inline-block; 
 	position: relative;
-	background: red;
 	top: 15px;
 	left: 90px;
-	border: 10px solid red;
 	height: 400px;
 
 }
@@ -55,4 +52,69 @@ p {
 	bottom: 0;
 	left: 90px;
 	height: 400px;
+}
+
+span {
+	font-size: 15px;
+}
+
+.description {
+	position: relative;
+	top: 15px;
+	left: 90px;
+	width: 750px;	
+}
+
+#user {
+	font-size: 20px;
+}
+
+#descp {
+	font-size: 15px;
+}
+
+.subscribe {
+	display: inline;
+	float: right;
+	font-size: 20px;
+	color: white;
+	background: red;
+	padding: 10px;
+}
+#padd {
+	
+	padding-left: 70px;
+}
+
+.more {
+	font-size: 20px;
+	color: gray;
+}
+
+.sidebar {
+	padding: 17px 0 0 15px;
+	height: 700px;
+	width: 469px;
+	position: absolute;
+	top: 55px;
+	right: 0px;
+	
+	
+}
+
+#sidi {
+	font-size: 22px;
+}
+
+.videos {
+	padding: 10px 0 0 0;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+.gfd {
+	display= inline-block;
+	float: left;
 }
